Update author meta tag in index.html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         100% { transform: translateY(-110vh); opacity: 0; }
       }
     </style>
-    <meta name="author" content="Lovable" />
+    <meta name="Luthfi" content="" />
 
     <!-- TODO: Update og:title to match your application name -->
     <meta property="og:title" content="" />
