Update document title for Valentine web story

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- TODO: Set the document title to the name of your application -->
-    <title>Our Love: A Valentine Web Story</title>
+    <title>A Valentine Web Story for Raina</title>
     <meta name="description" content="A Valentine RPG story made with love for Raina♥" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
